--- a/style.css
+++ b/style.css
@@ -15,20 +15,20 @@ body {
   min-height: 100vh;
   background-color: rgb(0, 68, 255);
   background-image: 
-    radial-gradient(at 40% 20%, hsla(0, 75%, 60%) 0px, transparent 50%),
-    radial-gradient(at 80% 0%, hsla(189, 100%, 56%, 1) 0px, transparent 50%),
+    radial-gradient(at 40% 20%, rgb(135, 230, 76) 0px, transparent 50%),
+    radial-gradient(at 80% 0%, rgb(34, 172, 196) 0px, transparent 50%),
     radial-gradient(at 0% 50%, hsl(213, 44%, 46%) 0px, transparent 50%),
-    radial-gradient(at 80% 50%, hsla(340, 100%, 76%, 1) 0px, transparent 50%),
+    radial-gradient(at 80% 50%, rgb(133, 188, 255) 0px, transparent 50%),
     radial-gradient(at 0% 100%, hsla(22, 100%, 77%, 1) 0px, transparent 50%),
-    radial-gradient(at 80% 100%, rgb(56, 55, 82) 0px, transparent 50%),
-    radial-gradient(at 0% 0%, hsla(343, 100%, 76%, 1) 0px, transparent 50%);
+    radial-gradient(at 80% 100%, rgb(57, 53, 169) 0px, transparent 50%),
+    radial-gradient(at 0% 0%, rgb(212, 242, 44) 0px, transparent 50%);
 }
 
 .container {
   background: rgba(255, 255, 255, 0.24);
-  border-radius: 10px;
-  padding: 20px 30px;
-  border: 2px solid #000;
+  border-radius: 12px;
+  padding: 30px 30px;
+  border: 3px solid #000;
   text-align: center;
   min-width: 400px;
   backdrop-filter: blur(2px);
@@ -42,14 +42,14 @@ body {
 }
 
 h1 {
-  font-size: 28px;
+  font-size: 26px;
   margin-bottom: 25px;
   color: #181818;
 }
 
 label {
   text-align: left;
-  font-size: 15px;
+  font-size: 16px;
   font-weight: 600;
   margin: 15px 0;
   display: block;
@@ -79,7 +79,7 @@ input::placeholder {
 
 button {
   width: 100%;
-  color: #000;
+  color: #000; 
   border: 2px solid #000;
   border-radius: 5px;
   padding: 8px;
@@ -90,7 +90,7 @@ button {
 }
 
 button:hover {
-  background-color: #2c2e30;
+  background-color: #222f3db5;
   color: #fff;
 }
 
